base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-deploy-base
spec:
  selector:
    matchLabels:
      name: <commonLabels>
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        name: <commonLabels>
    spec:
      containers:
      - name: app
        image: application-base:init
        imagePullPolicy: Always
        ports:
        - containerPort: application-base
        readinessProbe: 
          httpGet:
            path: application-base
            port: application-base
          initialDelaySeconds: application-base
          periodSeconds: application-base
          timeoutSeconds: application-base
        livenessProbe:
          httpGet:
            path: application-base
            port: application-base
          initialDelaySeconds: application-base
          periodSeconds: application-base
          timeoutSeconds: application-base
      terminationGracePeriodSeconds: 30
