base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-svc-base
spec:
  selector:
    name: app
  ports:
  - name: application-svc-base
    port: application-base
    targetPort: application-base
  type: NodePort
